
add_library_ex(CommonPulseModels
  H_FILES
    PulseConfiguration.h
    PulsePhysiologyEngine.h
    PulsePhysiologyEnginePool.h
    PulsePhysiologySystems.h
    PulseScenario.h
    PulseScenarioExec.h
    stdafx.h
    controller/BlackBoxes.h
    controller/Circuits.h
    controller/Compartments.h
    controller/Controller.h
    controller/Engine.h
    controller/Substances.h
    controller/System.h
    environment/Environment.h
    equipment/AnesthesiaMachine.h
    equipment/ECG.h
    equipment/Inhaler.h
    equipment/MechanicalVentilator.h
    physiology/BloodChemistry.h
    physiology/Cardiovascular.h
    physiology/Drugs.h
    physiology/Endocrine.h
    physiology/Energy.h
    physiology/Gastrointestinal.h
    physiology/Hepatic.h
    physiology/Nervous.h
    physiology/Renal.h
    physiology/Respiratory.h
    physiology/Saturation.h
    physiology/Tissue.h
    io/protobuf/PBPulse.h
    io/protobuf/PBPulseConfiguration.h
    io/protobuf/PBPulseEnvironment.h
    io/protobuf/PBPulseEquipment.h
    io/protobuf/PBPulsePhysiology.h
    io/protobuf/PBPulseState.h
  CPP_FILES
    PulseConfiguration.cpp
    PulsePhysiologyEngine.cpp
    PulsePhysiologyEnginePool.cpp
    PulseScenario.cpp
    PulseScenarioExec.cpp
    controller/BlackBoxes.cpp
    controller/Circuits.cpp
    controller/Compartments.cpp
    controller/Controller.cpp
    controller/Engine.cpp
    controller/Substances.cpp
    controller/SetupPatient.cpp
    controller/SetupCircuitsAndCompartments.cpp
    environment/Environment.cpp
    equipment/AnesthesiaMachine.cpp
    equipment/ECG.cpp
    equipment/Inhaler.cpp
    equipment/MechanicalVentilator.cpp
    physiology/BloodChemistry.cpp
    physiology/Cardiovascular.cpp
    physiology/Drugs.cpp
    physiology/Endocrine.cpp
    physiology/Energy.cpp
    physiology/Gastrointestinal.cpp
    physiology/Hepatic.cpp
    physiology/Nervous.cpp
    physiology/Renal.cpp
    physiology/Respiratory.cpp
    physiology/Saturation.cpp
    physiology/Tissue.cpp
    io/protobuf/PBPulse.cpp
    io/protobuf/PBPulseEnums.cpp
    io/protobuf/PBPulseConfiguration.cpp
    io/protobuf/PBPulseEnvironment.cpp
    io/protobuf/PBPulseEquipment.cpp
    io/protobuf/PBPulsePhysiology.cpp
    io/protobuf/PBPulseState.cpp
  PUBLIC_DEPENDS
    CommonDataModel
  PRIVATE_DEPENDS
    protobuf::libprotobuf
)
target_include_directories(CommonPulseModels PRIVATE ${EIGEN3_INCLUDE_DIR})

add_subdirectory(test)
