add_executable_ex(HowToDriver
  EngineHowTo.cpp
  EngineHowTo.h
  HowTo-ACLS.cpp
  HowTo-AirwayObstruction.cpp
  HowTo-AnesthesiaMachine.cpp
  HowTo-Arrhythmia.cpp
  HowTo-Asthma.cpp
  HowTo-BagValveMask.cpp
  HowTo-BolusDrug.cpp
  HowTo-BrainInjury.cpp
  HowTo-CombatMultitrauma.cpp
  HowTo-ConsumeNutrients.cpp
  HowTo-COPD.cpp
  HowTo-COVID19Ventilated.cpp
  HowTo-CPR.cpp
  HowTo-CreateAPatient.cpp
  HowTo-ECMO.cpp
  HowTo-EngineUse.cpp
  HowTo-EnvironmentChange.cpp
  HowTo-Exercise.cpp
  HowTo-ExpandedVasculature.cpp
  HowTo-Hemorrhage.cpp
  HowTo-Hemothorax.cpp
  HowTo-Pneumonia.cpp
  HowTo-MechanicalVentilation.cpp
  HowTo-MechanicalVentilator.cpp
  HowTo-PulmonaryFibrosis.cpp
  HowTo-PulseEnginePool.cpp
  HowTo-RespiratoryMechanics.cpp
  HowTo-RunScenario.cpp
  HowTo-RunThreaded.cpp
  HowTo-RunThreaded.h
  HowTo-Sandbox.cpp
  HowTo-ScenarioBase.cpp
  HowTo-ScenarioFromLog.cpp
  HowTo-Serialize.cpp
  HowTo-Smoke.cpp
  HowTo-TensionPneumothorax.cpp
  HowTo-TestSystemCapability.cpp
  HowTo-VentilationMechanics.cpp
)
target_link_libraries(HowToDriver Pulse)
